<resources>
    <string name="app_name">Library</string>
    <string name="welcome">Вітаємо!</string>
    <string name="phone">Телефон</string>
    <string name="enter_phone">Введіть номер телефону</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введіть пароль</string>
    <string name="login">Увійти</string>
    <string name="register">Зареєструватися</string>
    <string name="input_data">Введіть дані</string>
    <string name="login_failed">Невірний пароль або номер</string>
    <string name="data">Введіть дані</string>
    <string name="register_label">Реєстрація</string>
    <string name="cancel">Скасувати</string>
    <string name="create_account">Створити акаунт</string>
    <string name="name">Ім\'я та прізвище</string>
    <string name="address">Адреса доставки</string>
    <string name="select_plan">Оберіть план</string>
    <string name="already_reg">Такий номер вже зареєстровано</string>
    <string name="error">Помилка. Перепрошуємо за незучності</string>
    <string name="successfulReg">Зареєстровано успішно!</string>
    <string name="catalog">Каталог</string>
    <string name="reading">Читаю</string>
    <string name="settings">Налаштування</string>

    <string-array name="plan_array">
        <item>7 днів - 49 грн/міс</item>
        <item>14 днів - 79 грн/міс</item>
        <item>Місяць - 149 грн/міс</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Пошук</string>
    <string name="recommendation">Рекомендуємо</string>
    <string name="categories">Категорії</string>
    <string name="enter_name">Введіть назву книги</string>
    <string name="make_order">Замовити кнгу</string>
    <string name="background">background</string>
    <string name="book_image">Book image</string>
    <string name="author">Автор</string>
    <string name="kind">Жанр</string>
    <string name="pages">Сторінки</string>
    <string name="about_book">Про книгу</string>
    <string name="confirm">Підтвердити</string>
    <string name="book">Книга</string>
    <string name="customer">Замовник</string>
    <string name="term">Термін щоб прочитати</string>
    <string name="order_book">Створення замовлення</string>
    <string name="order_done">Замовлення створено</string>
    <string name="order_detail">Деталі надійдуть на SMS повідомлення</string>
    <string name="already_rent">Ви вже орендували цю книгу</string>
    <string name="return_order">Повернути</string>
    <string name="return_to">Повернути до</string>
    <string name="rent_books">Орендовані книги</string>
    <string name="return_book">Повернення книги</string>
    <string name="return_application">Свторено заявку на повернення</string>
    <string name="about_info">Додаток для взаємодії з локальною БД бібліотеки та виконання різних дій з нею. Розроблений Кузбитом Святославом для освітньої компоненти \"Основи програмної інженерії\" у грудні 2023 року\n\n<a href="https://github.com/SviatKuzbyt/Library">GitHub проєкта</a> \n<a href="https://fonts.google.com">Ікнонки та шрифти</a> \n<a href="https://www.flaticon.com/free-icons/library">Логотип програми</a>\n<a href="https://www.yakaboo.ua/">Дані отримані з yakaboo</a></string>
    <string name="about_label">Про додаток</string>
    <string name="contorl">Управління</string>
    <string name="account_data_label">Дані акаунта</string>
    <string name="plan">Тарифний план</string>
    <string name="change_account_settings">Змінити дані аккаунту</string>
    <string name="exit">Вийти</string>
    <string name="save">Зберегти</string>
    <string name="data_update">Дані оновилися</string>

</resources>