<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.info.BookActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/orderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/make_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_main_background"
        android:textAppearance="@style/textWhite"
        />

    <ImageView
        android:id="@+id/imageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="-48dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/imageContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/background"
        android:alpha="0.8"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/imageContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookToolbar"
        android:layout_width="176dp"
        android:layout_height="264dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        android:transitionName="bookImg">
        <ImageView
            android:id="@+id/bookInfoImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/book_image"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>




    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollBook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/orderButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:background="@drawable/rounded_space"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textLabel"
                android:textAppearance="@style/textHead"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recylerBookInfo"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_book"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/textBold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textDescription"
                android:textAppearance="@style/textGeneral"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bookToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_ic"
        app:titleTextAppearance="@style/textBold"/>

</androidx.constraintlayout.widget.ConstraintLayout>